--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 <body>
     <h1>Api-test-Repo-1</h1>
     <h2>Date: 15 November,2022 </h2>
+    <H1>OK. I have done it . Alhamdulillah.</H1>
+    <ul id="10Users"></ul>
 
+    <ul id="100Posts"></ul>
+
+    <button onclick="loadData()">Load Single Data</button>
+
+    <button onclick="loadUseersData()">Load 10 Users Data</button>
+
+    <button onclick="loadPosts()">Load 100 post</button>
 
 
 
